<resources>
    <string name="app_name">Scrap Manga</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="search_selection">Search Selection</string>
    <string name="preference_file_key">nl.hubble.scrapmanga_preferences.xml</string>
    <string name="cover">cover</string>
    <string name="colon_">:</string>
    <string name="genre_s">Genre(s)</string>
    <string name="status">Status</string>
    <string name="author_s">Author(s)</string>
    <string name="updated">Updated</string>
    <string name="description">Description</string>
    <string name="manga">Manga</string>
    <string name="first">First</string>
    <string name="continue_">Continue</string>
    <string name="chapters">Chapters</string>
    <string name="loading">loading</string>
    <string name="chapter">Chapter</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ongoing">Ongoing</string>
    <string name="finished">Finished</string>
    <string name="manga_non_existent">Manga does not exist</string>
    <string name="unread_">+%d</string>
    <string name="add_manga">Add Manga</string>
    <string name="refresh">Refresh</string>
    <string name="image">image</string>
    <string name="glide_load">Glide Load</string>
    <string name="lazy_load">Lazy Load</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="error">Error</string>
    <string name="delete_manga">Delete Manga</string>
    <string name="alt_title_s">Alt. Title(s)</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="no_manga_added_yet">No manga added yet…</string>

    <string name="settings">Settings</string>

    <!-- Manga Preferences-->
    <string name="refresh_summary_on">Automatically refresh a manga when it is opened</string>
    <string name="refresh_summary_off">Never automatically refresh a manga when opened</string>
    <string name="auto_refresh_time">Auto Refresh Time</string>

    <!-- Chapter Preferences -->
    <string name="use_glide_default">Use Glide by Default</string>
    <string name="_0_0">0/0</string>
    <string name="retry">Retry</string>
    <string name="progress">Progress</string>
    <string name="done">Done</string>
    <string name="no_chapters">No Chapters</string>
    <string name="last">Last</string>
    <string name="warning">Warning!</string>
    <string name="skipping_chapter_warning">You might be skipping some chapters, are you sure you want to start reading the last chapter?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="there_are_no_chapters">There are no chapters</string>
    <string name="deleted">Deleted!</string>
    <string name="invalid_url">Not a valid URL!</string>
    <string name="already_exists">Already exists</string>
    <string name="lazy_load_default">lazy_load_default</string>
    <string name="use_lazy_load_default">Use Lazy Load by Default</string>
    <string name="reset_queries_key">Reset Queries</string>
    <string name="reset_queries_summary">If you made changed to the query file, this would remove them</string>
    <string name="download_database">Download Database</string>
    <string name="download_manga">Download</string>
    <string name="progress_count">%d/%d</string>
    <string name="select_all">Select</string>
    <string name="search_online">Search Online</string>
    <string name="search">Search</string>
    <string name="read">Read</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="image_saved">Image Saved</string>
    <string name="image_save">Save</string>
    <string name="image_reload">Reload</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="options">Options</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="website">Website</string>
    <string name="copy">Copy</string>
    <string name="manga_already_exists">This manga already exists!</string>
    <string name="delete_manga_confirm">Are you sure you want to remove \'%s\'?</string>
    <string name="removed_manga">Removed \'%s\'</string>
    <string name="manga_url">Manga URL</string>
    <string name="add">Add</string>
    <string name="manga_missing_data">Manga is missing important data</string>
    <string name="open">Open</string>
    <string name="supported_websites">Supported Websites</string>
    <string name="run_query">Run Query</string>
    <string name="sql_query">SQL Query</string>
    <string name="execute">Execute</string>
    <string name="interval">Updates</string>
    <string name="calculate_reading_time">Calculate Reading Time</string>
    <string name="one_chapter">One chapter</string>
    <string name="all_read_chapters">All read chapters</string>
    <string name="statistics">Statistics</string>
    <string name="run_query_summary">aDvaNced feAture</string>
    <string name="supported_websites_summary">List of all websites which are supported</string>
    <string name="download_database_summary">Download a copy of your database to your Downloads folder</string>
    <string name="image_caching">Cache Images</string>
    <string name="image_caching_on">Images will be kept cached.\nmiGht crAsh yoUr phOne on WebTooNs</string>
    <string name="image_caching_off">Images will not be cached.\nThis means that every time you reload, the image will have to be fetched from the web again</string>
    <string name="progress_number">Progress Number</string>
    <string name="progress_number_on">Show number</string>
    <string name="progress_number_off">Show chapter</string>
</resources>