<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_24px"
        android:onClick="refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/dark_mode"
        android:checkable="true"
        android:onClick="toggleNightMode"
        android:title="@string/dark_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_manga"
        android:onClick="addManga"
        android:title="@string/add_manga"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:onClick="settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>